- Added and redesiged UI - Integrated with Firestore for managing logins. - Hiding google-services.json for security.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Mathest</string>
+    <string name="login">Login</string>
+    <string name="uid">UID</string>
 </resources>
