- Added Firestore logins - Bug in displaying user details on home page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Mathest</string>
     <string name="login">Login</string>
     <string name="uid">UID</string>
+    <string name="node_users">users</string>
 </resources>
