Added strings from TestPage to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,31 @@
     <string name="name_display">Name: </string>
     <string name="grade_display">Grade: </string>
     <string name="school_display">School: </string>
+    <string name="correct_prompt">Correct!</string>
+    <string name="wrong_prompt">"Wrong!"</string>
+    <string name="read_instruction">Please read this!</string>
+    <string name="okay_dialog_button">Okay</string>
+    <string name="hint_answer_edit_box">Enter Numeric answer</string>
+    <string name="question_exhaust_message">Congratulations! You have answered all questions of this category. Please press \'Okay\' and then \'Save progress\' to exit.</string>
+    <string name="question_exhaust_title">Questions exhausted!</string>
+    <string name="question_number_display">Question </string>
+    <string name="add_instruction">Add </string>
+    <string name="and"> and </string>
+    <string name="subtract_instruction">Subtract </string>
+    <string name="from"> from </string>
+    <string name="multiply_instruction">Mutliply </string>
+    <string name="with"> with </string>
+    <string name="divide_instruction">Divide </string>
+    <string name="by"> by </string>
+    <string name="congratulations_display">Congratulations!"</string>
+    <string name="mastered_category_message">You have mastered this category!</string>
+    <string name="back_press_message">You can\'t go back from here</string>
+    <string name="back_press_title">Please press Save progress to exit</string>
+    <string name="no_internet_message">No internet detected</string>
+    <string name="provide_answer_hint">Please provide an answer</string>
+    <string name="functionality_unavailable">Functionality not available!</string>
+    <string name="correct_answer_message">Congratulations! Your answer is correct!</string>
+    <string name="working_correct_message">Congratulations! You did it absolutely right!</string>
     <string name="mathest_heroku_endpoint">http://mathest.herokuapp.com/</string>
     <string name="mathest_azure_endpoint">https://mathest-v1.azurewebsites.net/</string>
 </resources>
