--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,16 +7,16 @@
     <string name="hint_school">School</string>
     <string name="hint_grade">Grade</string>
     <string name="hint_full_name">Full Name</string>
-    <string name="uid_display_signup">Your UID is: </string>
+    <string name="uid_display">Your UID is: </string>
     <string name="signup">sign up</string>
     <string name="accuracy_default">Your accuracy: 100%</string>
     <string name="progress_default">Your progress: 0/10</string>
     <string name="ready_display">Ready to </string>
     <string name="lets_go_text">Let\'s Go!</string>
     <string name="addition_statistics">Addition Test Statistics</string>
-    <string name="questions_answered">Questions Answered: 0</string>
-    <string name="correct_answers">Correct answers: 0</string>
-    <string name="wrong_answers">Wrong answers: 0</string>
+    <string name="questions_answered_default">Questions Answered: 0</string>
+    <string name="correct_answers_default">Correct answers: 0</string>
+    <string name="wrong_answers_default">Wrong answers: 0</string>
     <string name="subtraction_statistics">Subtraction Test Statistics</string>
     <string name="multiplication_statistics">Multiplication Test Statistics</string>
     <string name="division_statistics">Division Test Statistics</string>
@@ -69,6 +69,9 @@
     <string name="subtraction_category">Subtraction</string>
     <string name="multiplication_category">Multiplication</string>
     <string name="division_category">Division</string>
+    <string name="questions_answered_display">Questions Answered: </string>
+    <string name="correct_answers_display">Correct Answers: </string>
+    <string name="wrong_answers_display">Wrong Answers: </string>
     <string name="mathest_heroku_endpoint">http://mathest.herokuapp.com/</string>
     <string name="mathest_azure_endpoint">https://mathest-v1.azurewebsites.net/</string>
 </resources>
