Added Hindi support to the API

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -75,4 +75,26 @@
     <string name="wrong_answers_default">गलत उत्तरों की संख्या : 0</string>
     <string name="wrong_answers_display">गलत उत्तरों की संख्या :</string>
     <string name="wrong_prompt">गलत!</string>
+    <string name="comment_a1">हेलो, आपने \'+\' चिन्ह को \'x\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_a2">हेलो, आपने यह सवाल काफी हद तक सही किया परन्तु एक कैर्री अंक छोड़ दिया, जब कभी भी दो अंको का जोड़ 9 से अधिक आता है तब आपको उसके बाएं तरफ वाले अंक पर 1 अंक और जोड़ना होता है, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_a3">हेलो, आपने 6 अंक को 9 समझने की भूल कर दी है, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_a4">हेलो, आपने 1 अंक को 7 समझने की भूल कर दी है, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_a5">हेलो, आपने 1 अंक को 7 तथा 6 अंक को 9 समझने की भूल कर दी है, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_a6">हेलो, आपने दाएं से बाएं जोड़ने के बजाय अंको को बाएं से दाएं की तरफ जोड़ दिया है, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_a7">हेलो, आपने यह सवाल काफी हद तक सही किया परन्तु अंत में एक 0 संख्या भूल गए, आपको लगा होगा 0 एक महत्वपूर्ण संख्या नहीं है, यह बात सच है परन्तु सिर्फ तब जब 0 सबसे बाएं तरफ आये, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_a8">हेलो, आपने यह सवाल काफी हद तक सही किया परन्तु बीच में एक 0 संख्या भूल गए, आपको लगा होगा 0 एक महत्वपूर्ण संख्या नहीं है, यह बात सच है परन्तु सिर्फ तब जब 0 सबसे बाएं तरफ आये, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_s1">हेलो, आपने \'-\' चिन्ह को \'+\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_s2">हेलो, आपने \'-\' चिन्ह को \'÷\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_s3">हेलो, आपको ज़रूर अंक उधार लेने में परेशानी हुई है, जब कभी भी आप एक अंक उधार लेते हैं तो जिस अंक से उधार लिया जाता है उस अंक में एक संख्या काम हो जाती है, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_m1">हेलो, आपने यह सवाल काफी हद तक सही किया परन्तु अंत में एक 0 संख्या भूल गए, आपको लगा होगा 0 एक महत्वपूर्ण संख्या नहीं है, यह बात सच है परन्तु सिर्फ तब जब 0 सबसे बाएं तरफ आये, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_m2">हेलो, आपने \'x\' चिन्ह को \'+\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_m3">हेलो, आपको अंको का स्थानीय मान समझने में परेशानी हुई है, आपने गुणा करने के बाद अंको को जोड़ते समय खिसका दिया है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_m4">हेलो, आपने 1 अंक को 7 समझने की भूल कर दी है, 0 को किसी भी संख्या से गुणा करने के बाद 0 ही आता है तथा 1 को किसी भी संख्या से गुणा करने के बाद वह संख्या खुद, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_d1">हेलो, आपने \'÷\' चिन्ह को \'x\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_d2">हेलो, आपने यह सवाल काफी हद तक सही किया परन्तु उत्तर को उल्टा कर के लिख दिया, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_d3">हेलो, आपने यह सवाल काफी हद तक सही किया परन्तु बीच में एक 0 संख्या भूल गए, आपको लगा होगा 0 एक महत्वपूर्ण संख्या नहीं है, यह बात सच है परन्तु सिर्फ तब जब 0 सबसे बाएं तरफ आये, आपकी इस गलती को ध्यान में रखते हुए हमने इसी प्रकार के तीन और सवाल जोड़ दिए हैं, आगे के लिए शुभकामनायें</string>
+    <string name="comment_d4">हेलो, आपने सिर्फ एक संख्या से भाग दे दिया है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_d5">हेलो, आपने लब्धि के स्थान पर शेष उत्तर दे दिया, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_d6">हेलो, आपने \'÷\' चिन्ह को \'-\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_d7">हेलो, आपने \'÷\' चिन्ह को \'+\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
 </resources>
