Added random error string

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -95,4 +95,5 @@
     <string name="comment_d5">हेलो, आपने लब्धि के स्थान पर शेष उत्तर दे दिया, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
     <string name="comment_d6">हेलो, आपने \'÷\' चिन्ह को \'-\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
     <string name="comment_d7">हेलो, आपने \'÷\' चिन्ह को \'+\' समझने की भूल कर दी है, हमने आप के लिए 3 इसी प्रकार के प्रश्न आपकी प्रश्न सूची में जोड़ दिए हैं, आगे के लिए शुभकामनाएं</string>
+    <string name="comment_random">हम यह गलती नहीं पहचान पाए किन्तु हम आपको तीन और प्रश्न दे रहे हैं क्योंकि आपके इस सवाल का उत्तर गलत था</string>
 </resources>
